--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "next-typescript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
     "dev": "next",
     "build": "next build",
